--- a/src/templates/trainings/import.twig
+++ b/src/templates/trainings/import.twig
@@ -51,7 +51,7 @@
     <div id="training">
 
         <div class="flex">
-            <h1 class="inline-fex flex-grow">{{ event.title }} - wawawawawawawaw</h1>
+            <h1 class="inline-fex flex-grow">{{ event.title }}</h1>
             <div>
                 {% include "craft-attendees/_includes/current-site" with {
                     currentSite: event.site
