fix(translate): changed the center translate classes to the css

--- a/src/web/assets/src/css/app.pcss
+++ b/src/web/assets/src/css/app.pcss
@@ -41,6 +41,9 @@
  * Include styles for individual pages
  *
  */
+.translate-center{
+    transform: translate(-50%,-50%);
+}
 
 /**
  * Include vendor css.
