feat: created a storage/logs/attendees.log file where all the data gets written to created a slack buzzer where all the errors gets send to created a dedicated storage path for writing the CSV files written a console command thats able to delete CSV files older than 60 days

--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -46,3 +46,25 @@
     instructions: 'Select the section where the events are created'|t('craft-attendees'),
     toggle: true,
 }) }}
+
+{{ forms.autosuggestField({
+    label: 'CSV Storage Path',
+    instructions: 'Enter the path where to store the CSV files',
+    id: 'csvStoragePath',
+    name: 'csvStoragePath',
+    suggestEnvVars: true,
+    required: true,
+    value: settings['csvStoragePath']})
+}}
+
+{{ forms.autosuggestField({
+    label: 'Slack Webhook',
+    instructions: 'Enter the webhook URL for the notifications to send',
+    id: 'slackWebhook',
+    name: 'slackWebhook',
+    suggestEnvVars: true,
+    required: true,
+    value: settings['slackWebhook']})
+}}
+
+
